gccida/c2/gen_split_1087
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_split_1087/src/insn-emit.c:12399:30: error: use of undeclared identifier 'machine_mode'
operands[1] = gen_lowpart( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), operands[1]); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_split_1087/src/insn-emit.c:12402:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_split_1087/src/insn-emit.c:12405:30: error: use of undeclared identifier 'machine_mode'
v3 = gen_rtx_fmt_ee( MULT, ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), operands[1], v2); 
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_split_1087/src/obj/insn-emit.o] Error 1
